[gd_scene load_steps=7 format=3 uid="uid://db711yiboenfu"]

[ext_resource type="Script" uid="uid://buqm1rb21mp1f" path="res://scenes/game/action_menu.gd" id="1_bxj4n"]
[ext_resource type="PackedScene" uid="uid://blev8t8g4iq0m" path="res://scenes/misc/icon_button.tscn" id="2_o375t"]
[ext_resource type="Texture2D" uid="uid://3r4js3eqwxv5" path="res://assets/icons/eye_show.png" id="3_68mdx"]
[ext_resource type="Texture2D" uid="uid://cuwa4bcd1nva7" path="res://assets/icons/eye_hide.png" id="4_text0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2exqa"]
bg_color = Color(0.235294, 0.235294, 0.235294, 0.882353)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l5ihf"]

[node name="ActionMenu" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = -209.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2exqa")
script = ExtResource("1_bxj4n")

[node name="OuterMargin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainVBox" type="VBoxContainer" parent="OuterMargin"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_l5ihf")

[node name="InstructionsHBox" type="HBoxContainer" parent="OuterMargin/MainVBox/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="InstructionsLabel" type="RichTextLabel" parent="OuterMargin/MainVBox/PanelContainer/InstructionsHBox"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "Instructions go here to tell you what to do:
triple
line"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/MainVBox/PanelContainer/InstructionsHBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="HideShowBox" type="HBoxContainer" parent="OuterMargin/MainVBox/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/MainVBox/PanelContainer/HideShowBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShowMenuButton" parent="OuterMargin/MainVBox/PanelContainer/HideShowBox" instance=ExtResource("2_o375t")]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("3_68mdx")

[node name="HideMenuButton" parent="OuterMargin/MainVBox/PanelContainer/HideShowBox" instance=ExtResource("2_o375t")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("4_text0")

[node name="ChoiceButtons" type="GridContainer" parent="OuterMargin/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[connection signal="pressed" from="OuterMargin/MainVBox/PanelContainer/HideShowBox/ShowMenuButton" to="." method="_on_show_menu_button_pressed"]
[connection signal="pressed" from="OuterMargin/MainVBox/PanelContainer/HideShowBox/HideMenuButton" to="." method="_on_hide_menu_button_pressed"]
